Abstract heap class